--- a/doc/gen/helix2solv.1
+++ b/doc/gen/helix2solv.1
@@ -1,13 +1,13 @@
 '\" t
 .\"     Title: helix2solv
 .\"    Author: [see the "Author" section]
-.\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
-.\"      Date: 07/25/2017
+.\" Generator: DocBook XSL Stylesheets vsnapshot <http://docbook.sf.net/>
+.\"      Date: 08/04/2017
 .\"    Manual: LIBSOLV
 .\"    Source: libsolv
 .\"  Language: English
 .\"
-.TH "HELIX2SOLV" "1" "07/25/2017" "libsolv" "LIBSOLV"
+.TH "HELIX2SOLV" "1" "08/04/2017" "libsolv" "LIBSOLV"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
