Tweak documentation of add_dirstr method

--- a/doc/gen/libsolv-bindings.3
+++ b/doc/gen/libsolv-bindings.3
@@ -5659,7 +5659,7 @@ Convert a string (directory) into an Id and back\&. If the string is currently n
 .RE
 .\}
 .sp
-Add a file provide\&.
+Add a file path consisting of a dirname Id and a basename string\&.
 .sp
 .if n \{\
 .RS 4
