build: use GNUInstallDirs
Fixes: #128
Signed-off-by: Igor Gnatenko <i.gnatenko.brain@gmail.com>

--- a/README
+++ b/README
@@ -37,7 +37,7 @@ Supported repository formats:
 Build instructions
 ==================
 
-Requires: cmake 2.4.x
+Requires: cmake 2.8.5 or later
 
     mkdir build
     cd build
