--- a/README
+++ b/README
@@ -1,10 +1,13 @@
+Libsolv
+=======
+
 This is libsolv, a free package dependency solver using a satisfiability
 algorithm.
 
 The code is based on two major, but independent, blocks:
 
- 1. Using a dictionary approach to store and retrieve package
-    and dependency information.
+ 1. Using a dictionary approach to store and retrieve package and
+    dependency information in a fast and space efficient manner.
 
  2. Using satisfiability, a well known and researched topic, for
     resolving package dependencies.
